# Dota-2-Match-Win-Predictor

./: .gitignore  README.md  pyproject.toml
configs/: parser.yaml  patches.yaml
src/dota_predictor/: __init__.py
src/dota_predictor/parser/: __init__.py  checkpoint.py  cli.py  collector.py  config.py  models.py  normalizer.py  parquet_store.py  patches.py  quality.py  raw_store.py  source.py
tests/parser/: conftest.py  test_cli.py  test_collector.py  test_normalizer.py  test_parquet_store.py  test_patches.py  test_raw_store.py
