[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dota-2-match-win-predictor"
version = "0.1.0"
description = "Dota 2 match win predictor data parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pyarrow>=16.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
dota-parser = "dota_predictor.parser.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "types-PyYAML>=6.0.12.20240917",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dota_predictor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
